--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script></head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>welcome to college, sidra✨</title>
+  <title> men seni cox sevirem inci ✨</title>
   <meta name="theme-color" content="#fdeaf1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -224,15 +224,112 @@
     </section>
 
     <!-- 5) Inside Jokes / Quotes -->
-    <section class="card" aria-label="inside jokes">
-      <h2>our timeline</h2>
-      <div class="jokes" id="jokes">
-        <div class="joke">260718 </div>
-        <div class="joke">new year ritual : 00:00 a.m. </div>
-        <div class="joke"> niche references  —  707 (nana lol) & d^=b[,7’ (sarawatine) </div>
-        <div class="joke"> compulsorily going no-contact before birthdays</div>
-      </div>
-    </section>
+   <section class="card" aria-label="100 things">
+  <h2>100 things I love about you</h2>
+  <div class="jokes" id="jokes">
+    <div class="joke">1. I love your personality.</div>
+    <div class="joke">2. I love your confidence.</div>
+    <div class="joke">3. I love your honesty.</div>
+    <div class="joke">4. I love how you listen to me.</div>
+    <div class="joke">5. I love your apple theory.</div>
+    <div class="joke">6. I love your voice when youre nervous.</div>
+    <div class="joke">7. I love the way you say my name.</div>
+    <div class="joke">8. I love how you're always there for me.</div>
+    <div class="joke">9. I love your patience.</div>
+    <div class="joke">10. I love how you think youre funny.</div>
+    <div class="joke">11. I love how cool you think you are.</div>
+    <div class="joke">12. I love your love for shekerbura.</div>
+    <div class="joke">13. I love how seen you make me feel.</div>
+    <div class="joke">14. I love the efforts you put into everything.</div>
+    <div class="joke">15. I love your loyalty.</div>
+    <div class="joke">16. I love your music taste.</div>
+    <div class="joke">17. I love your sarcasm.</div>
+    <div class="joke">18. I love your love for chess.</div>
+    <div class="joke">19. I love how you deeply you think.</div>
+    <div class="joke">20. I love your creativity.</div>
+    <div class="joke">21. I love your late-night texts.</div>
+    <div class="joke">22. I love the way you remember small details.</div>
+    <div class="joke">23. I love your kindness to strangers.</div>
+    <div class="joke">24. I love how you never let me feel alone.</div>
+    <div class="joke">25. I love your little face.</div>
+    <div class="joke">26. I love your fawn-eyes.</div>
+    <div class="joke">27. I love the way you talk.</div>
+    <div class="joke">28. I love our deep talks.</div>
+    <div class="joke">29. I love your intelligence.</div>
+    <div class="joke">30. I love your book/movie recommendations.</div>
+    <div class="joke">31. I love your love for chocolate milk.</div>
+    <div class="joke">32. I love how invested you are with vita and virginia.</div>
+    <div class="joke">33. I love your stubbornness.</div>
+    <div class="joke">34. I love the way you bully me.</div>
+    <div class="joke">35. I love how you let me be myself.</div>
+    <div class="joke">36. I love your compliments.</div>
+    <div class="joke">37. I love how open to opinions you are.</div>
+    <div class="joke">38. I love your dedication.</div>
+    <div class="joke">39. I love your dreams.</div>
+    <div class="joke">40. I love spending time with you.</div>
+    <div class="joke">41. I love how hardworking you are.</div>
+    <div class="joke">42. I love when youre not afraid to tell me when im wrong.</div>
+    <div class="joke">43. I love your fashion sense.</div>
+    <div class="joke">44. I love your bravery.</div>
+    <div class="joke">45. I love how you laugh at your own jokes.</div>
+    <div class="joke">46. I love when youre dramatic.</div>
+    <div class="joke">47. I love the way you think for yourself and dont let anything or anyone intervene with your thoughts.</div>
+    <div class="joke">48. I love the secrets that we share.</div>
+    <div class="joke">49. I love when you let me know little pieces of you.</div>
+    <div class="joke">50. I love when you refuse to give up.</div>
+    <div class="joke">51. I love your energy.</div>
+    <div class="joke">52. I love your compassion.</div>
+    <div class="joke">53. I love when you speak in spanish.</div>
+    <div class="joke">54. I love when you love me.</div>
+    <div class="joke">55. I love when you hate me.</div>
+    <div class="joke">56. I love when you see through fictional characters as metaphors.</div>
+    <div class="joke">57. I love your poems.</div>
+    <div class="joke">58. I love your letters.</div>
+    <div class="joke">59. I love when youre willing to talk things out with me.</div>
+    <div class="joke">60. I love when we make up storylines for alphabets, words and colours.</div>
+    <div class="joke">61. I love how understanding you are.</div>
+    <div class="joke">62. I love the way you know exactly what to say.</div>
+    <div class="joke">63. I love your stubborn little habits.</div>
+    <div class="joke">64. I love your positivity.</div>
+    <div class="joke">65. I love your deep thoughts.</div>
+    <div class="joke">66. I love when we hate the same things.</div>
+    <div class="joke">67. I love when we love the same things.</div>
+    <div class="joke">68. I love your strength.</div>
+    <div class="joke">69. I love your silly mistakes.</div>
+    <div class="joke">70. I love how you encourage me to grow.</div>
+    <div class="joke">71. I love your comforting words.</div>
+    <div class="joke">72. I love your strong opinions.</div>
+    <div class="joke">73. I love the way you care for your loved ones.</div>
+    <div class="joke">74. I love when you let me talk you through your overthinking sessions.</div>
+    <div class="joke">75. I love the love that we share for movies.</div>
+    <div class="joke">76. I love the love that we share for books.</div>
+    <div class="joke">77. I love when you freestyle intentionally.</div>
+    <div class="joke">78. I love your hidden talents.</div>
+    <div class="joke">79. I love the way you say “it’ll be okay.”</div>
+    <div class="joke">80. I love your curiosity.</div>
+    <div class="joke">81. I love your stubborn loyalty.</div>
+    <div class="joke">82. I love your wild imagination.</div>
+    <div class="joke">83. I love your little traditions with me.</div>
+    <div class="joke">84. I love how much you love academic validation.</div>
+    <div class="joke">85. I love the way you want to learn every language.</div>
+    <div class="joke">86. I love the way you want to travel every corner of the world.</div>
+    <div class="joke">87. I love your random “I miss you” messages.</div>
+    <div class="joke">88. I love the way you want to experience every aspect of life in multiple perspectives.</div>
+    <div class="joke">89. I love the way you want to practice every profession.</div>
+    <div class="joke">90. I love your love for knowledge.</div>
+    <div class="joke">91. I love your childlike wonder.</div>
+    <div class="joke">92. I love how intellectually gifted you are.</div>
+    <div class="joke">93. I love your brunette hair.</div>
+    <div class="joke">94. I love how you make every place feel safe.</div>
+    <div class="joke">95. I love your pretty body.</div>
+    <div class="joke">96. I love the way you look out for me.</div>
+    <div class="joke">97. I love your hugs when I’m down.</div>
+    <div class="joke">98. I love your presence alone.</div>
+    <div class="joke">99. I love your love for me.</div>
+    <div class="joke">100. I love you.</div>
+  </div>
+</section>
+
 
     <!-- 6) Count-UP (since 24 Sept 2020) -->
     <section class="card" aria-label="countup">
