--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
     <div class="joke">72. I love your strong opinions.</div>
     <div class="joke">73. I love the way you care for your loved ones.</div>
     <div class="joke">74. I love when you let me talk you through your overthinking sessions.</div>
-    <div class="joke">75. I love the love that we share for movies.</div>
-    <div class="joke">76. I love the love that we share for books.</div>
+    <div class="joke">75. I love the love that we share for theatre and cinema</div>
+    <div class="joke">76. I love the love that we share for literature.</div>
     <div class="joke">77. I love when you freestyle intentionally.</div>
     <div class="joke">78. I love your hidden talents.</div>
     <div class="joke">79. I love the way you say “it’ll be okay.”</div>
@@ -313,7 +313,7 @@
     <div class="joke">84. I love how much you love academic validation.</div>
     <div class="joke">85. I love the way you want to learn every language.</div>
     <div class="joke">86. I love the way you want to travel every corner of the world.</div>
-    <div class="joke">87. I love your random “I miss you” messages.</div>
+    <div class="joke">87. I love your “I miss you” </div>
     <div class="joke">88. I love the way you want to experience every aspect of life in multiple perspectives.</div>
     <div class="joke">89. I love the way you want to practice every profession.</div>
     <div class="joke">90. I love your love for knowledge.</div>
