--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
 
     <!-- 2) Playlist Embed -->
     <section class="card" aria-label="playlist">
-      <h2>our playlist — miles apart, always in my heart 
+      <h2>our song — miles apart, always in my heart 
 </h2>
-      <!-- 2) Playlist Embed --> <section class="card" aria-label="playlist"> <iframe class="playlist-embed" src="https://open.spotify.com/embed/playlist/23dWLtrCNti140LSTkxdZ6" <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/23dWLtrCNti140LSTkxdZ6?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></section>
+      <!-- 2) Playlist Embed --> <section class="card" aria-label="playlist"> <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/2enPRFda84VE2wtI8c86Uf?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></section>
 
     <!-- 3) Photo Gallery / Memories -->
     <section class="card" aria-label="memories">
@@ -209,11 +209,11 @@
           <div class="letter" id="letter-miss">hi sidra, i’m just a text away. same moon, same sky. breathe deep, im all yours. </div>
         </div>
         <div class="envelope" data-letter="hard">
-          <h3>college feels hard  </h3>
+          <h3>you need love </h3>
           <div class="letter" id="letter-hard">take it one tiny step at a time. you’ve already survived 100% of your worst days. you’re stronger than this moment.</div>
         </div>
         <div class="envelope" data-letter="laugh">
-          <h3>you need a laugh </h3>
+          <h3>you're mad at me </h3>
           <div class="letter" id="letter-laugh">remember when we gaslighted ourselves into believing that we could stay no-contact, but went spiralling 2 minutes later.</div>
         </div>
         <div class="envelope" data-letter="win">
@@ -225,7 +225,7 @@
 
     <!-- 5) Inside Jokes / Quotes -->
    <section class="card" aria-label="100 things">
-  <h2>100 things I love about you</h2>
+  <h2>100 things i love about you</h2>
   <div class="jokes" id="jokes">
     <div class="joke">1. I love your personality.</div>
     <div class="joke">2. I love your confidence.</div>
@@ -243,7 +243,7 @@
     <div class="joke">14. I love the efforts you put into everything.</div>
     <div class="joke">15. I love your loyalty.</div>
     <div class="joke">16. I love your music taste.</div>
-    <div class="joke">17. I love your sarcasm.</div>
+    <div class="joke">17. I love when you do "WHO SAID THAT" after saying questionable things. </div>
     <div class="joke">18. I love your love for chess.</div>
     <div class="joke">19. I love how you deeply you think.</div>
     <div class="joke">20. I love your creativity.</div>
@@ -295,7 +295,7 @@
     <div class="joke">66. I love when we hate the same things.</div>
     <div class="joke">67. I love when we love the same things.</div>
     <div class="joke">68. I love your strength.</div>
-    <div class="joke">69. I love your silly mistakes.</div>
+    <div class="joke">69. I love your obsession with milfs.</div>
     <div class="joke">70. I love how you encourage me to grow.</div>
     <div class="joke">71. I love your comforting words.</div>
     <div class="joke">72. I love your strong opinions.</div>
@@ -333,7 +333,7 @@
 
     <!-- 6) Count-UP (since 24 Sept 2020) -->
     <section class="card" aria-label="countup">
-      <h2> 𝓈id & 𝒾nci — ever since
+      <h2> 𝓈id & 𝒾nc𝒾 — ever since
 </h2>
       <div class="countup" id="countup"></div>
     </section>
@@ -354,7 +354,7 @@
   <div class="modal" id="modal" role="dialog" aria-modal="true" aria-labelledby="modalTitle" aria-describedby="modalDesc">
     <div class="modal-card">
       <h2 id="modalTitle" style="margin:0 0 8px">surprise!</h2>
-      <p id="modalDesc">no matter the distance, i’m cheering for you, always. send me a selfie after your first week. my moon. im so far gone in love with you, theres no saving me. all the best with everything, my love, my doll, my star. </p>
+      <p id="modalDesc">no matter the distance, i’m cheering for you, always. my moon. im so far gone in love with you, theres no saving me. all the best with everything, my love, my doll, my star. </p>
       <button class="btn close" id="closeModal">close</button>
     </div>
   </div>
