--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 </head>
 <body>
   <header>
-    <h1 class="title">𝐖𝐄𝐋𝐂𝐎𝐌𝐄 𝐓𝐎 𝐂𝐎𝐋𝐋𝐄𝐆𝐄, 
+    <h1 class="title">𝐓𝐄 𝐀𝐌𝐎 
  <span id="herName">
-𝐒𝐈𝐃𝐑𝐀!
+ 𝐈𝐍𝐂𝐈!
 </span>🎓</h1>
-    <p class="subtitle">i wish you well in all phases of your life</p>
+    <p class="subtitle">men seni cox sevirem</p>
     <div class="confetti" id="confetti"></div>
   </header>
 
@@ -164,17 +164,17 @@
       <div class="ticker-wrap">
         <div class="ticker">
           <div class="ticker-track" id="tickerTrack">
-            <span>you’re doing amazing </span>
-            <span>i’m always a text away </span>
-            <span> (its still highschool lmao) </span>
-            <span>you’re stronger than you think </span>
-            <span>college is lucky to have you </span>
+            <span>mi bambi </span>
+            <span> mənim sevgim </span>
+            <span> mi amorcita </span>
+            <span>my girl </span>
+            <span> mi estrella </span>
             <!-- duplicate for seamless loop -->
-            <span>you’re so smart </span>
-            <span>my genius</span>
-            <span>you'll ace all your classes </span>
-            <span>you’re the best</span>
-            <span>i love you</span>
+            <span> my pearl </span>
+            <span>mənim möcüzəm</span>
+            <span>mi florecita </span>
+            <span>mi solecita</span>
+            <span>my universe</span>
           </div>
         </div>
       </div>
@@ -182,9 +182,9 @@
 
     <!-- 2) Playlist Embed -->
     <section class="card" aria-label="playlist">
-      <h2>our song — miles apart, always in my heart 
+      <h2>our song —— miles apart, always in my heart 
 </h2>
-      <!-- 2) Playlist Embed --> <section class="card" aria-label="playlist"> <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/18uOcUO5mNEYHHigeXPgQM?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></section>
+      <!-- 2) Playlist Embed --> <section class="card" aria-label="playlist"> <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1LzNfuep1bnAUR9skqdHCK?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></section>
 
     <!-- 3) Photo Gallery / Memories -->
     <section class="card" aria-label="memories">
@@ -333,7 +333,7 @@
 
     <!-- 6) Count-UP (since 24 Sept 2020) -->
     <section class="card" aria-label="countup">
-      <h2> 𝓈id & 𝒾nc𝒾 — ever since
+      <h2> 𝓈id & 𝒾nc𝒾 — ever since 
 </h2>
       <div class="countup" id="countup"></div>
     </section>
