--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script></head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title> men seni cox sevirem inci ✨</title>
+  <title> mən səni sevirəm inci ✨</title>
   <meta name="theme-color" content="#fdeaf1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -153,8 +153,8 @@
     <h1 class="title">𝐓𝐄 𝐀𝐌𝐎 
  <span id="herName">
  𝐈𝐍𝐂𝐈!
-</span>🎓</h1>
-    <p class="subtitle">men seni cox sevirem</p>
+</span></h1>
+    <p class="subtitle">to keep you in a glass case laced with vines of roses</p>
     <div class="confetti" id="confetti"></div>
   </header>
 
@@ -173,7 +173,7 @@
             <span> my pearl </span>
             <span>mənim möcüzəm</span>
             <span>mi florecita </span>
-            <span>mi solecita</span>
+            <span>mi solecita </span>
             <span>my universe</span>
           </div>
         </div>
@@ -206,19 +206,19 @@
       <div class="envelopes">
         <div class="envelope" data-letter="miss">
           <h3>you miss me </h3>
-          <div class="letter" id="letter-miss">hi sidra, i’m just a text away. same moon, same sky. breathe deep, im all yours. </div>
+          <div class="letter" id="letter-miss">hi inci, i’m just a text away. same moon, same sky. breathe deep, im all yours. i love you more intensely than all the forces of the constellations combined. </div>
         </div>
         <div class="envelope" data-letter="hard">
-          <h3>you need love </h3>
-          <div class="letter" id="letter-hard">take it one tiny step at a time. you’ve already survived 100% of your worst days. you’re stronger than this moment.</div>
+          <h3>you want love </h3>
+          <div class="letter" id="letter-hard"> are you sad? what is it baby? take it one tiny step at a time. you’ve already survived 100% of your worst days. you’re stronger than this moment. im always here for you. you're everything to me. i hope we are forever. our invisible string is unbreakable and i'm always going to find my way back to you even if we are no-contact. you've etched your name deep into my soul with stains of gold all over, stains so stubborn, so unremovable. te amo, inci, youre my summer miracle. </div>
         </div>
         <div class="envelope" data-letter="laugh">
           <h3>you're mad at me </h3>
-          <div class="letter" id="letter-laugh">remember when we gaslighted ourselves into believing that we could stay no-contact, but went spiralling 2 minutes later.</div>
+          <div class="letter" id="letter-laugh">im sorry, love. i love you way too much to lose you over a petty fight, inci. please forgive me. talk it out with me as we always do, te amo baby. </div>
         </div>
         <div class="envelope" data-letter="win">
           <h3>you achieved something</h3>
-          <div class="letter" id="letter-win">i’m so proud of you! brag to me immediately. </div>
+          <div class="letter" id="letter-win"> inci, i’m so proud of you! brag to me immediately. i always knew you could do it, there's so much more to come your way, amorcita. this is just the beginning. keep going, love. you're destined for the best things in life and i know you're going to make it happen, you always do! mwah. </div>
         </div>
       </div>
     </section>
@@ -246,7 +246,7 @@
     <div class="joke">17. I love when you do "WHO SAID THAT" after saying questionable things. </div>
     <div class="joke">18. I love your love for chess.</div>
     <div class="joke">19. I love how you deeply you think.</div>
-    <div class="joke">20. I love your creativity.</div>
+    <div class="joke">20. I love how you absolutely despise my jokes </div>
     <div class="joke">21. I love your late-night texts.</div>
     <div class="joke">22. I love the way you remember small details.</div>
     <div class="joke">23. I love your kindness to strangers.</div>
@@ -333,7 +333,7 @@
 
     <!-- 6) Count-UP (since 24 Sept 2020) -->
     <section class="card" aria-label="countup">
-      <h2> 𝓈id & 𝒾nc𝒾 — ever since 
+      <h2> 𝓈id & 𝒾nc — ever since 
 </h2>
       <div class="countup" id="countup"></div>
     </section>
