--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
         </div>
         <div class="envelope" data-letter="hard">
           <h3>you want love </h3>
-          <div class="letter" id="letter-hard"> are you sad? what is it baby? take it one tiny step at a time. you’ve already survived 100% of your worst days. you’re stronger than this moment. im always here for you. you're everything to me. i hope we are forever. our invisible string is unbreakable and i'm always going to find my way back to you even if we are no-contact. you've etched your name deep into my soul with stains of gold all over, stains so stubborn, so unremovable. te amo, inci, youre my summer miracle. </div>
+          <div class="letter" id="letter-hard"> take it one tiny step at a time, inci. you’ve already survived 100% of your worst days. you’re stronger than this moment. im always here for you. you're everything to me. i hope we are forever. our invisible string is unbreakable and i'm always going to find my way back to you even if we are no-contact. you've etched your name deep into my soul with stains of gold all over, stains so stubborn, so unremovable. te amo, inci, youre my summer miracle. </div>
         </div>
         <div class="envelope" data-letter="laugh">
           <h3>you're mad at me </h3>
-          <div class="letter" id="letter-laugh">im sorry, love. i love you way too much to lose you over a petty fight, inci. please forgive me. talk it out with me as we always do, te amo baby. </div>
+          <div class="letter" id="letter-laugh">im sorry, love. i love you way too much to lose you over a petty fight, inci. talk it out with me as we always do, te amo baby. </div>
         </div>
         <div class="envelope" data-letter="win">
           <h3>you achieved something</h3>
@@ -382,8 +382,8 @@
     /* -------- gallery -------- */
     const images = [
       /* EDIT ME: replace with your own image URLs */
-      'https://i.postimg.cc/N0CkLMWW/download.jpg',
-      'https://i.postimg.cc/sxYWPDNf/image.jpg',
+      'https://i.postimg.cc/CKyXyZ26/download.jpg',
+      'https://i.postimg.cc/htQ6382d/verliebte-Schw-ne-in-Amsterdam.jpg',
       'https://i.postimg.cc/21pwFGhb/IMG-8784.jpg',
       'https://i.postimg.cc/kXKh2QMK/download-3.jpg'
     ];
