--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script></head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title> mən səni sevirəm inci ✨</title>
+  <title> mən səni sevirəm inci </title>
   <meta name="theme-color" content="#fdeaf1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -182,13 +182,13 @@
 
     <!-- 2) Playlist Embed -->
     <section class="card" aria-label="playlist">
-      <h2>our song —— miles apart, always in my heart 
+      <h2>our song — miles apart, always in my heart 
 </h2>
       <!-- 2) Playlist Embed --> <section class="card" aria-label="playlist"> <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1LzNfuep1bnAUR9skqdHCK?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe></section>
 
     <!-- 3) Photo Gallery / Memories -->
     <section class="card" aria-label="memories">
-      <h2> reminders of us
+      <h2> under willow trees — us in the whimsy fairy gardens
  </h2>
       <div class="gallery" id="gallery">
         <div class="slides" id="slides"><!-- slides injected by JS --></div>
@@ -384,8 +384,8 @@
       /* EDIT ME: replace with your own image URLs */
       'https://i.postimg.cc/CKyXyZ26/download.jpg',
       'https://i.postimg.cc/htQ6382d/verliebte-Schw-ne-in-Amsterdam.jpg',
-      'https://i.postimg.cc/21pwFGhb/IMG-8784.jpg',
-      'https://i.postimg.cc/kXKh2QMK/download-3.jpg'
+      'https://i.postimg.cc/bJV4B6f1/download-3.jpg',
+      'https://i.postimg.cc/7PsqFVns/download-4.jpg'
     ];
     const slides = document.getElementById('slides');
     if(images.length){
