--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     <!-- 3) Photo Gallery / Memories -->
     <section class="card" aria-label="memories">
-      <h2> under willow trees — us in the whimsy fairy gardens
+      <h2> under willow trees in mythical forests — us in the whimsical fairy gardens
  </h2>
       <div class="gallery" id="gallery">
         <div class="slides" id="slides"><!-- slides injected by JS --></div>
@@ -232,7 +232,7 @@
     <div class="joke">3. I love your honesty.</div>
     <div class="joke">4. I love how you listen to me.</div>
     <div class="joke">5. I love your apple theory.</div>
-    <div class="joke">6. I love your voice when youre nervous.</div>
+    <div class="joke">6. I love your voice.</div>
     <div class="joke">7. I love the way you say my name.</div>
     <div class="joke">8. I love how you're always there for me.</div>
     <div class="joke">9. I love your patience.</div>
@@ -243,13 +243,13 @@
     <div class="joke">14. I love the efforts you put into everything.</div>
     <div class="joke">15. I love your loyalty.</div>
     <div class="joke">16. I love your music taste.</div>
-    <div class="joke">17. I love when you do "WHO SAID THAT" after saying questionable things. </div>
+    <div class="joke">17. I love when you go "WHO SAID THAT" after saying questionable things. </div>
     <div class="joke">18. I love your love for chess.</div>
     <div class="joke">19. I love how you deeply you think.</div>
-    <div class="joke">20. I love how you absolutely despise my jokes </div>
+    <div class="joke">20. I love how you absolutely despise my jokes. </div>
     <div class="joke">21. I love your late-night texts.</div>
     <div class="joke">22. I love the way you remember small details.</div>
-    <div class="joke">23. I love your kindness to strangers.</div>
+    <div class="joke">23. I love your kindness.</div>
     <div class="joke">24. I love how you never let me feel alone.</div>
     <div class="joke">25. I love your little face.</div>
     <div class="joke">26. I love your fawn-eyes.</div>
@@ -289,14 +289,14 @@
     <div class="joke">60. I love when we make up storylines for alphabets, words and colours.</div>
     <div class="joke">61. I love how understanding you are.</div>
     <div class="joke">62. I love the way you know exactly what to say.</div>
-    <div class="joke">63. I love your stubborn little habits.</div>
+    <div class="joke">63. I love your whimsy little habits.</div>
     <div class="joke">64. I love your positivity.</div>
     <div class="joke">65. I love your deep thoughts.</div>
     <div class="joke">66. I love when we hate the same things.</div>
     <div class="joke">67. I love when we love the same things.</div>
     <div class="joke">68. I love your strength.</div>
     <div class="joke">69. I love your obsession with milfs.</div>
-    <div class="joke">70. I love how you encourage me to grow.</div>
+    <div class="joke">70. I love how you leave your unforgettable impressions on everyone you meet.</div>
     <div class="joke">71. I love your comforting words.</div>
     <div class="joke">72. I love your strong opinions.</div>
     <div class="joke">73. I love the way you care for your loved ones.</div>
@@ -305,7 +305,7 @@
     <div class="joke">76. I love the love that we share for literature.</div>
     <div class="joke">77. I love when you freestyle intentionally.</div>
     <div class="joke">78. I love your hidden talents.</div>
-    <div class="joke">79. I love the way you say “it’ll be okay.”</div>
+    <div class="joke">79. I love your desire to keep growing. </div>
     <div class="joke">80. I love your curiosity.</div>
     <div class="joke">81. I love your stubborn loyalty.</div>
     <div class="joke">82. I love your wild imagination.</div>
@@ -320,10 +320,10 @@
     <div class="joke">91. I love your childlike wonder.</div>
     <div class="joke">92. I love how intellectually gifted you are.</div>
     <div class="joke">93. I love your brunette hair.</div>
-    <div class="joke">94. I love how you make every place feel safe.</div>
+    <div class="joke">94. I love how your pretty soul.</div>
     <div class="joke">95. I love your pretty body.</div>
     <div class="joke">96. I love the way you look out for me.</div>
-    <div class="joke">97. I love your hugs when I’m down.</div>
+    <div class="joke">97. I love when you magically know when I’m down.</div>
     <div class="joke">98. I love your presence alone.</div>
     <div class="joke">99. I love your love for me.</div>
     <div class="joke">100. I love you.</div>
