--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     <div class="joke">16. I love your music taste.</div>
     <div class="joke">17. I love when you go "WHO SAID THAT" after saying questionable things. </div>
     <div class="joke">18. I love your love for chess.</div>
-    <div class="joke">19. I love how you deeply you think.</div>
+    <div class="joke">19. I love how observant you are.</div>
     <div class="joke">20. I love how you absolutely despise my jokes. </div>
     <div class="joke">21. I love your late-night texts.</div>
     <div class="joke">22. I love the way you remember small details.</div>
@@ -259,7 +259,7 @@
     <div class="joke">30. I love your book/movie recommendations.</div>
     <div class="joke">31. I love your love for chocolate milk.</div>
     <div class="joke">32. I love how invested you are with vita and virginia.</div>
-    <div class="joke">33. I love your stubbornness.</div>
+    <div class="joke">33. I love when you dont sugarcoat and hold accountability. </div>
     <div class="joke">34. I love the way you bully me.</div>
     <div class="joke">35. I love how you let me be myself.</div>
     <div class="joke">36. I love your compliments.</div>
@@ -288,7 +288,7 @@
     <div class="joke">59. I love when youre willing to talk things out with me.</div>
     <div class="joke">60. I love when we make up storylines for alphabets, words and colours.</div>
     <div class="joke">61. I love how understanding you are.</div>
-    <div class="joke">62. I love the way you know exactly what to say.</div>
+    <div class="joke">62. I love the way we can be all mushy and cutesy one second, absolute retards the next and then literal revolutionary geniuses.</div>
     <div class="joke">63. I love your whimsy little habits.</div>
     <div class="joke">64. I love your positivity.</div>
     <div class="joke">65. I love your deep thoughts.</div>
